@@ -25,7 +25,7 @@ See the examples/ directory of this project for code examples.
 
 See the INSTALL file for instructions.
 
-== Questions
+== Questions and/or Comments
 
 Feel free to email {James Edward Gray II}[mailto:james@grayproductions.net] with
 any questions.
